// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Footer /> should render properly 1`] = `
.c4 {
  color: #fff;
}

.c5 {
  color: #d73738;
  -webkit-text-decoration: none;
  text-decoration: none;
  box-shadow: none;
}

.c5:hover,
.c5:focus {
  border-bottom: 1px solid #d73738;
  outline: none;
}

.c0 {
  max-width: 400px;
  margin-bottom: 50px;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin: 0;
  padding: 0;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c2 {
  list-style: none;
  font-size: 18px;
  font-weight: 700;
}

.c3 {
  color: #d73738;
  -webkit-text-decoration: none;
  text-decoration: none;
  box-shadow: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #d73738;
  display: block;
  padding: 0;
  border-bottom: 1px solid transparent;
}

.c3:hover,
.c3:focus {
  border-bottom: 1px solid #d73738;
  outline: none;
}

.c3:hover {
  border-bottom: 1px solid #d73738;
}

<body>
  <div>
    <footer
      class=""
    >
      <nav
        class="c0"
      >
        <ul
          class="c1"
        >
          <li
            class="c2"
          >
            <a
              class="c3"
              href="mailto:johndoe@doe.com"
              rel="noopener"
              target="_blank"
            >
              email
            </a>
          </li>
          <li
            class="c2"
          >
            <a
              class="c3"
              href="https://google.com.br"
              rel="noopener"
              target="_blank"
            >
              site
            </a>
          </li>
        </ul>
      </nav>
      <span
        class="c4"
      >
          © 
          2020
        , built with 
      </span>
      <a
        class="c5"
        href="https://gatsbyjs.org"
        rel="noopener"
        target="_blank"
      >
        gatsby
      </a>
      <span
        class="c4"
      >
          • 
      </span>
    </footer>
  </div>
</body>
`;

exports[`<Footer /> should render the repository url if passed 1`] = `
<body>
  .c2 {
  color: #fff;
}

.c3 {
  color: #d73738;
  -webkit-text-decoration: none;
  text-decoration: none;
  box-shadow: none;
}

.c3:hover,
.c3:focus {
  border-bottom: 1px solid #d73738;
  outline: none;
}

.c0 {
  max-width: 400px;
  margin-bottom: 50px;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin: 0;
  padding: 0;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

<div>
    <footer
      class=""
    >
      <nav
        class="c0"
      >
        <ul
          class="c1"
        />
      </nav>
      <span
        class="c2"
      >
        © 
        2020
        , built with 
      </span>
      <a
        class="c3"
        href="https://gatsbyjs.org"
        rel="noopener"
        target="_blank"
      >
        gatsby
      </a>
      <span
        class="c2"
      >
         • 
      </span>
      <a
        class="c3"
        href="https://github.com/diegocosta/blog.diegocosta.com.br"
        rel="noopener"
        target="_blank"
      >
        source code
      </a>
    </footer>
  </div>
</body>
`;
